# bim-multi-agent-orchestrator

./: .env.example  .gitignore  Advanced AI Reasoning for Multi-Agent Engineering Systems.md  CLAUDE.md  CODEBASE_EXPLORATION_REPORT.md  Engineering Documentation RAG System: Complete Implementation Guide.md  Engineering_Multi-Agent_Architecture.md  FIXES_IMPLEMENTATION_SUMMARY.md  MEMORY_FIX_VALIDATION.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_REFACTORING_SUMMARY.md  PRAISONAI_REMOVAL_SUMMARY.md  QUICK_FIXES_REFERENCE.md  QUICK_START_MEMORY_TEST.md  README.md  REFACTORING_ACHIEVEMENT.md  REFACTORING_SUMMARY.md  ToT.md  apuntes.md  d8ce0832-8ac2-49bc-a276-9254c4dcc286.pem  pruebas.py  pyproject.toml  test_aps_server_direct.py  test_mcp_orchestrator_fixed.py  test_mcp_raw.py  test_mcp_sdk.py  test_working_stdio.py  validate_fixes.py
.orchestrator/: hybrid_lexical.db
.orchestrator/hybrid_chroma/: chroma.sqlite3
.praison/: hybrid_lexical.db  ingestion_log.db  long_term.db  short_term.db
.praison/hybrid_chroma/: chroma.sqlite3
.praison/memory/: long.db  short.db
agents/bim_ir/: __init__.py
claudedocs/: ADR_STATE_FIELD_CONCURRENCY_SAFETY.md  APS_AUTH001_FIX_SUMMARY.md  APS_AUTH001_ROOT_CAUSE_ANALYSIS.md  APS_MCP_QUICK_FIX.md  APS_MCP_STDIO_INCOMPATIBILITY.md  APS_MCP_TASKGROUP_EXECUTIVE_SUMMARY.md  APS_MCP_TASKGROUP_ROOT_CAUSE_ANALYSIS.md  APS_MCP_WORKING_SOLUTION.md  AUTODESK_AEC_AUTHENTICATION_GUIDE.md  AUTODESK_AEC_AUTHENTICATION_SOLUTION.md  BACKEND_REGISTRY_FIX_EXECUTIVE_SUMMARY.md  CONCURRENT_STATE_FIX_IMPLEMENTATION.md  CONDITIONAL_NODE_GENERATION_STRATEGY.md  CURRENT_ITERATION_CONCURRENT_WRITE_ROOT_CAUSE.md  CURRENT_NODE_CONCURRENT_WRITE_FIX.md  DISPLAY_ERROR_DATA_FLOW_TRACE.md  DISPLAY_ERROR_EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_CONCURRENT_FIX.md  F1_WORKFLOW_FAILURE_EXECUTIVE_SUMMARY.md  F1_WORKFLOW_FAILURE_ROOT_CAUSE_ANALYSIS.md  F1_WORKFLOW_NO_OUTPUT_QUICK_FIX.md  F1_WORKFLOW_NO_OUTPUT_ROOT_CAUSE_ANALYSIS.md  FIX_DISPLAY_DICT_ERROR.md  GRAPH_FACTORY_BACKEND_REGISTRY_ROOT_CAUSE.md  GRAPH_FACTORY_FIX_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY_DUPLICATE_OUTPUT_FIX.md  JSON_PARSER_FIX_SUMMARY.md  MAX_ITERATIONS_VALIDATION_FIX.md  MCP_COMPATIBILITY_ANALYSIS.md  MCP_DOTNET_CONNECTION_ROOT_CAUSE.md  MCP_FIXES_IMPLEMENTED.md  MCP_PROTOCOL_VERSION_IMPLEMENTATION.md  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  OBSERVABILITY_ISSUES_ROOT_CAUSE_ANALYSIS.md  OBSERVABILITY_QUICK_REFERENCE.md  ORCHESTRATOR_ARCHITECTURE.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_WEEK_2_COMPLETION.md  PHASE_3_VALIDATION_REPORT.md  QUICK_START_GUIDE.md  (+9 more)
claudedocs/graphs/: workflow_fallback_sequential_3_agents_20251029_162745.mmd  workflow_tot_graph_3_agents_20251005_102645.mmd  workflow_tot_graph_3_agents_20251022_200949.mmd  workflow_tot_graph_3_agents_20251024_161423.mmd  workflow_tot_graph_3_agents_20251024_172135.mmd  workflow_tot_graph_3_agents_20251024_173649.mmd  workflow_tot_graph_3_agents_20251025_121349.mmd  workflow_tot_graph_3_agents_20251029_181802.mmd
docs/: mcp_integration.md
examples/: mcp_aps_example.py  orchestrator_worker_parallel.py
examples/memory/: test_mem0_memory.py
orchestrator/: README.md  __init__.py
orchestrator/cli/: __init__.py  __main__.py  chat_orchestrator.py  display_adapter.py  events.py  graph_adapter.py  (+4 more)
(+150 files in other folders)
