[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agents-unified"
version = "1.0.0"
description = "Unified AI Agents Framework with Mem0AI long-term memory and LangGraph orchestration"
authors = [
    { name = "AI Agents Team" }
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    # Core dependencies
    "rich>=13.7",
    "markdown>=3.5",
    "pyparsing>=3.0.0",
    # LangChain/LangGraph orchestration
    "langchain>=0.3.0",
    "langgraph>=0.6.0",
    "langchain-openai>=0.2.1",
    "langchain-community>=0.3.0",
    "python-dotenv>=0.19.0",
    "instructor>=1.3.3",
    "PyYAML>=6.0",
    "mcp>=1.0.0,<1.18.0", # MCP client SDK - compatible with pydantic 2.10.1
    "qdrant-client>=1.9.1",
    "pydantic>=2.7.3,<=2.10.1",
    "openai>=1.90.0,<1.110.0",
    "posthog>=3.5.0",
    "pytz>=2024.1",
    "sqlalchemy>=2.0.36",
    "protobuf>=5.29.0,<6.0.0",
    # Pin torch for macOS Intel where latest wheels are unavailable
    "torch>=2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "mem0ai[graph]>=0.1.117",
    "chromadb>=1.0.21",
    "sentence-transformers>=5.1.0",
    "pypdf>=5.9.0",
]

[project.scripts]
# Orchestrator scripts can be added here in the future

[project.optional-dependencies]
# Original Mem0AI groups
mem0-graph = [
    "langchain-neo4j>=0.4.0",
    "langchain-aws>=0.2.23",
    "neo4j>=5.23.1",
    "rank-bm25>=0.2.2",
    "kuzu>=0.11.0",
]
mem0-vector-stores = [
    "vecs>=0.4.0",
    "chromadb>=0.4.24",
    "weaviate-client>=4.4.0,<4.15.0",
    "pinecone<=7.3.0",
    "pinecone-text>=0.10.0",
    "faiss-cpu>=1.7.4",
    "upstash-vector>=0.1.0",
    "azure-search-documents>=11.4.0b8",
    "psycopg>=3.2.8",
    "psycopg-pool>=3.2.6,<4.0.0",
    "pymongo>=4.13.2",
    "pymochow>=2.2.9",
    "valkey>=6.0.0",
    "databricks-sdk>=0.63.0",
    "azure-identity>=1.24.0",
    "redis>=5.0.0,<6.0.0",
    "redisvl>=0.1.0,<1.0.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "pymilvus>=2.4.0,<2.6.0",
]
mem0-llms = [
    "groq>=0.3.0",
    "together>=0.2.10",
    "litellm>=1.74.0",
    "openai>=1.90.0,<1.110.0",
    "ollama>=0.1.0",
    "vertexai>=0.1.0",
]
mem0-extras = [
    "boto3>=1.34.0",
    "langchain-community>=0.0.0",
    "sentence-transformers>=5.0.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "opensearch-py>=2.0.0",
    "langchain-memgraph>=0.1.0",
]

# Alternative LLM providers (optional)
llm-anthropic = [
    "langchain-anthropic>=0.3.0",
]
llm-cohere = [
    "langchain-cohere>=0.3.0",
]
llm-all = [
    "ai-agents-unified[llm-anthropic,llm-cohere]",
]


# Development and testing
test = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
]
dev = [
    "ruff>=0.6.5",
    "isort>=5.13.2",
    "pytest>=8.2.2",
]

# Convenience groups for complete installations
mem0-full = [
    "ai-agents-unified[mem0-graph,mem0-vector-stores,mem0-llms,mem0-extras]"
]

all-mem0 = [
    "ai-agents-unified[mem0-full,test,dev]"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build]
include = [
    "mem0/**/*.py",
    "orchestrator/**/*.py",
]

[tool.ruff]
line-length = 120
exclude = ["embedchain/", "openmemory/"]
